# kkt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  kaggle_pip_list.json  pyproject.toml  pytest.ini
.github/workflows/: workflow.yml
examples/dogs_vs_cats_efficientnet/: README.md  main.ipynb  pyproject.toml
examples/kkt_example/: README.md  pyproject.toml  script.py
examples/mnist_efficientnet/: README.md  pyproject.toml  script.py
examples/mnist_efficientnet/mnist_efficientnet/: __init__.py  io.py  network.py
examples/titanic_multi_files/: README.md  pyproject.toml
examples/titanic_multi_files/script/: logistic_regression.py  random_forest.py  xgb.py
examples/titanic_multi_files/src/titanic_multi_files/: __init__.py  io.py  util.py
examples/vanilla/: pyproject.toml
examples/vanilla/kkt_example/: __init__.py
kaggle_kernel_tool/: cli.py  exception.py  parser.py  repo.py
kaggle_kernel_tool/builders/kernels/: __init__.py  script_kernel.py
kaggle_kernel_tool/commands/: push.py
kaggle_kernel_tool/utils/: __init__.py  dict.py  parser.py
kkt/: __init__.py  cli.py  exception.py  fetch.py  kernel_proc.py  parser.py  repo.py  resource.py
kkt/builders/: __init__.py  default_hosted_pkgs.py  factory.py  package.py  packaging.py  packaging_system.py  requirements.py
kkt/builders/kernels/: __init__.py  bootstrap.py  notebook_kernel.py  script_kernel.py
kkt/commands/: __init__.py  download.py  init.py  install.py  kkt_command.py  push.py  status.py
kkt/utils/: __init__.py  dict.py  encode.py  parser.py
scripts/: convert_pip_list.py
tests/: conftest.py  test_builder.py  test_commands_download.py  test_commands_init.py  test_commands_install.py  test_commands_push.py  test_commands_status.py  test_kaggle_kernel_tool.py  test_packaging.py  test_packaging_system.py  test_parser.py  test_repo.py
tests/data/: pyproject.toml
tests/test_commands_install/test01/: pyproject.toml
tests/test_commands_push/with_git/: pyproject.toml
tests/test_commands_push/with_git/dot_git/: COMMIT_EDITMSG  index
tests/test_commands_push/with_git/dot_git/logs/: HEAD
tests/test_commands_push/with_git/dot_git/logs/refs/heads/: master
tests/test_commands_push/with_git/dot_git/refs/heads/: master
tests/test_commands_push/without_git/: pyproject.toml  script_without_git.py
tests/test_packaging/: pyproject.toml
tests/test_packaging_system/: pyproject.toml
tests/test_parser/: mandatory.toml  multi_target.toml  no_mandatory.toml  normal.toml
tests/test_repo/dot_git/: COMMIT_EDITMSG  index
tests/test_repo/dot_git/logs/: HEAD
tests/test_repo/dot_git/refs/heads/: master
