[tool.poetry]
name = "kkt"
version = "0.1.3"
description = "A tool for kaggle kernel"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
kaggle = "^1.5"
click = "^7.0"
tomlkit = "^0.5.8"
poetry = "0.12.17"
lockfile = "^0.12.2"
gitpython = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
python-language-server = "^0.31.1"
pyls-black = "^0.4.4"
pyls-isort = "^0.1.1"
pyls-mypy = "^0.1.8"
pytest-black = "^0.3.7"
pytest-mypy = "^0.4.2"

[tool.poetry.scripts]
kkt = 'kkt.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
