[tool.poetry]
name = "kkt"
version = "0.1.5"
description = "A tool for kaggle kernel"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
kaggle = "^1.5"
click = "^7.0"
tomlkit = "^0.5.8"
poetry = "1.0.0"
lockfile = "^0.12.2"
gitpython = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
python-language-server = "^0.31.1"
pyls-black = "^0.4.4"
pyls-mypy = "^0.1.8"
pytest-black = "^0.3.7"
pytest-mypy = "^0.4.2"
pre-commit = "^1.20"

[tool.poetry.scripts]
kkt = 'kkt.cli:main'

[tool.black]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
