[tool.poetry]
name = "kkt"
version = "0.3.0"
description = "A tool for kaggle kernel"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
kaggle = "^1.5"
click = "^7.0"
tomlkit = "^0.5.8"
poetry = "1.0.0"
lockfile = "^0.12.2"
gitpython = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
python-language-server = "^0.31.1"
pyls-black = "^0.4.4"
pyls-mypy = "^0.1.8"
pytest-black = "^0.3.7"
pytest-mypy = "^0.4.2"
pre-commit = "^1.20"
bandit = "^1.6.2"
pytest-cov = "^2.8.1"
pytest-datadir = "^1.3.1"
pytest-chdir = "^0.1.0"
pytest-annotate = "^1.0.3"
pytest-click = "^0.3"
pytest-env = "^0.6.2"
pytest-virtualenv = "^1.7.0"
pppiv = "^0.1.1"
wemake-python-styleguide = "^0.13.4"
pycallgraph = "^1.0.1"
radon = "^4.1.0"
pytest-picked = "^0.4.1"
pytest-xdist = "^1.31.0"
johnnydep = "^1.5"
pipdeptree = "^0.13.2"
vulture = "^1.5"
requests-mock = "^1.8.0"

[tool.poetry.scripts]
kkt = 'kkt.cli:main'

[tool.black]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
