[tool.poetry]
name = "dogs_vs_cats_efficientnet"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
timm = "^0.1.30"
kaggle_timm_pretrained = "^0.1.0"
pytorch-lightning = "^0.8.5"
torchvision = "^0.6.1"
Pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
kkt = {path = "../.."}
jupyter = "^1.0.0"
nb-clean = "^1.4.3"


[tool.kkt]
enable_git_tag = false

[tool.kkt.meta_data]
code_file = "main.ipynb"
competition = "dogs-vs-cats"
competition_sources = ["dogs-vs-cats"]
dataset_sources = ["ar90ngas/timm-pretrained-efficientnet"]
enable_constraint = false
enable_gpu = true
enable_internet = false
is_private = false
kernel_type = "notebook"
slug = "dogs-vs-cats-efficientnet"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
