[tool.poetry]
name = "mnist_efficientnet"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
timm = "^0.1.30"
torch = "^1.5.1"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
kkt = {path = "../.."}


[tool.kkt]
enable_git_tag = false

[tool.kkt.meta_data]
code_file = "script.py"
competition = "digit-recognizer"
competition_sources = ["digit-recognizer"]
dataset_sources = []
enable_constraint = false
enable_gpu = true
enable_internet = false
is_private = false
kernel_type = "script"
slug = "mnist-efficientnet"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
