[tool.poetry]
name = "titanic_multi_files"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
scikit-learn = "^0.23.1"
lightgbm = "^2.3.1"
xgboost = "^1.1.1"

[tool.poetry.dev-dependencies]
kkt = {path = "../.."}


[tool.kkt]
enable_git_tag = false

[tool.kkt.meta_data]
code_file = "script.py"
competition = "titanic"
competition_sources = ["titanic"]
dataset_sources = []
enable_constraint = false
enable_gpu = false
enable_internet = false
is_private = false
kernel_type = "script"
slug = "titanic-multi-files"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
