[tool.poetry]
name = "kaggle-kernel-tool"
version = "0.1.0"
description = "A tool for kaggle kernel"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
license = "MIT"

[tool.kkt]
slug = "kkt-kernel"
title = "title"
competition = "titanic"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
