[tool.poetry]
name = "kkt_commands_push_test_with_git"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.kkt.meta_data]
slug = "test01"
competition = "test01_comp"
code_file = "test01.py"
kernel_type = "script"

[tool.kkt.environment_variables]
ENV001 = "ENV001"

[tool.kkt]
enable_git_tag = true
enable_constraint = false
extra_dependencies = []
