[tool.poetry]
name = "kkt_commands_push_test_with_git"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.kkt.meta_data]
slug = "with_git"
competition = "with_git_comp"
code_file = "script_with_git.py"
kernel_type = "script"
is_private = false
enable_gpu = true
enable_internet = true
dataset_sources = ["with_git_data"]
kernel_data_sources = ["with_git_kernel"]
competition_sources = ["with_git_comp"]
keywords = ["with_git"]

[tool.kkt.environment_variables]
ENV001 = "ENV001"

[tool.kkt]
enable_git_tag = true
